# jep-authority-runtime

./: .gitignore  README.md  pyproject.toml
examples/: archive.jsonl  broken-chain.jsonl
jep_authority/: __init__.py  cli.py  runtime.py
tests/: test_runtime.py
